--- a/docs/faststore/docs/sdk/analytics/use-case-implementing-custom-newsletter-analytics-events.mdx
+++ b/docs/faststore/docs/sdk/analytics/use-case-implementing-custom-newsletter-analytics-events.mdx
@@ -419,7 +419,7 @@ Create a new section to receive the two new custom events:
 
 1. In the terminal, run `yarn cms-syn` to synchronize the new section you created with the CMS.
 2. Go to the VTEX Admin and access **Storefront > Headless CMS**.
-3. Click on the **Home** Content Type.
+3. Click the **Home** Content Type.
 4. In the Sections tab, click `+`, search for the new **Custom Newsletter** section, and add it to your page.
 
    ![analytics-custom-newsletter-cms-section](https://vtexhelp.vtexassets.com/assets/docs/src/analytics-custom-newsletter-section___96abd10dc72c4f09c15f71a9e42651d7.gif)
@@ -431,7 +431,7 @@ Create a new section to receive the two new custom events:
 ## Results
 
 1. Once you open the preview browser tab, open the **Console** of your browser’s **Developer Tools**.
-2. Go to the newsletter section on the store page and fill in the fields **Your Name** and **Your Email**.
+2. Go to the newsletter section on the store page and complete the fields **Your Name** and **Your Email**.
 3. Click `Subscribe`. You will notice in the **Console** tab that the two custom events were successfully triggered.
 
    ![analytics-custom-newsletter-firing-event](https://vtexhelp.vtexassets.com/assets/docs/src/analytics-custom-newsletter-firing-event___45d3f6e3f8586ef7fbbb389128bb4460.gif)
