--- a/docs/faststore/docs/sdk/analytics/use-case-implementing-custom-newsletter-analytics-events.mdx
+++ b/docs/faststore/docs/sdk/analytics/use-case-implementing-custom-newsletter-analytics-events.mdx
@@ -21,6 +21,8 @@ To follow this guide, you should be familiar with the following topics:
 
 ## Implementation
 
+<CH.Scrollycoding>
+
 ### Create a custom newsletter section
 
 Create a new section to receive the two new custom events:
@@ -28,194 +30,6 @@ Create a new section to receive the two new custom events:
 1. Open your store repository, and If you don't already have it, create a folder named `components` inside the `src` directory.
 2. Inside `components`, create the `sections` folder.
 3. Inside the `sections` folder, create the `CustomNewsletter.tsx` file and add the following:
-
-   ```tsx
-   import type {
-     ToastProps,
-     NewsletterAddendumProps as UINewsletterAddendumProps,
-     NewsletterHeaderProps as UINewsletterHeaderProps,
-     NewsletterProps as UINewsletterProps,
-   } from "@faststore/ui";
-   import { useUI } from "@faststore/ui";
-   import styles from "./section.module.scss";
-
-   import {
-     Button,
-     Icon,
-     InputField,
-     Newsletter,
-     NewsletterAddendum,
-     NewsletterContent,
-     NewsletterForm,
-     NewsletterHeader,
-   } from "@faststore/ui";
-
-   import { Section } from "@faststore/core";
-   import { useNewsletter_unstable as useNewsletter } from "@faststore/core/experimental";
-   import { type FormEvent, useRef } from "react";
-   import { sendAnalyticsEvent, useAnalyticsEvent } from "@faststore/sdk";
-
-   interface ArbitraryEvent {
-     name: string;
-     params: string;
-   }
-
-   type SubscribeMessage = {
-     icon: string;
-     title: string;
-     message: string;
-   };
-
-   export interface NewsletterProps {
-     title: UINewsletterHeaderProps["title"];
-     card?: UINewsletterProps["card"];
-     colorVariant?: UINewsletterProps["colorVariant"];
-     description?: UINewsletterHeaderProps["description"];
-     privacyPolicy?: UINewsletterAddendumProps["addendum"];
-     emailInputLabel?: string;
-     displayNameInput?: boolean;
-     icon: {
-       alt: string;
-       icon: string;
-     };
-     nameInputLabel?: string;
-     subscribeButtonLabel?: string;
-     subscribeButtonLoadingLabel?: string;
-     toastSubscribe?: SubscribeMessage;
-     toastSubscribeError?: SubscribeMessage;
-   }
-
-   export const AnalyticsHandler = () => {
-     useAnalyticsEvent((event: ArbitraryEvent) => {
-       console.log("Received event", event);
-     });
-
-     /* ... */
-
-     return null;
-   };
-
-   function CustomNewsletter({
-     icon: { icon, alt: iconAlt },
-     title,
-     description,
-     privacyPolicy,
-     emailInputLabel,
-     displayNameInput,
-     nameInputLabel,
-     subscribeButtonLabel,
-     subscribeButtonLoadingLabel,
-     card,
-     toastSubscribe,
-     toastSubscribeError,
-     colorVariant,
-     ...otherProps
-   }: NewsletterProps) {
-     const { pushToast } = useUI();
-     const { subscribeUser, loading } = useNewsletter();
-
-     const formRef = useRef<HTMLFormElement>(null);
-     const nameInputRef = useRef<HTMLInputElement>(null);
-     const emailInputRef = useRef<HTMLInputElement>(null);
-
-     const onSubmit = async (event: FormEvent) => {
-       event.preventDefault();
-
-       try {
-         // send event start
-         sendAnalyticsEvent<ArbitraryEvent>({
-           name: "Submit Newsletter",
-           params: "test",
-         });
-
-         const data = await subscribeUser({
-           data: {
-             name: nameInputRef.current?.value ?? "",
-             email: emailInputRef.current?.value ?? "",
-           },
-         });
-
-         if (data?.subscribeToNewsletter?.id) {
-           // send event start
-           sendAnalyticsEvent<ArbitraryEvent>({
-             name: "Submit newsletter success",
-             params: "test",
-           });
-
-           pushToast({
-             ...toastSubscribe,
-             status: "INFO",
-             icon: (
-               <Icon width={30} height={30} name={toastSubscribe?.icon ?? ""} />
-             ),
-           } as ToastProps);
-
-           formRef?.current?.reset();
-         }
-       } catch (error) {
-         pushToast({
-           ...toastSubscribeError,
-           status: "ERROR",
-           icon: (
-             <Icon
-               width={30}
-               height={30}
-               name={toastSubscribeError?.icon ?? ""}
-             />
-           ),
-         } as ToastProps);
-       }
-     };
-
-     return (
-       <Section
-         className={`${styles.section} section-newsletter layout__section`}
-       >
-         <AnalyticsHandler />
-         <Newsletter card={card ?? false} colorVariant={colorVariant}>
-           <NewsletterForm ref={formRef} onSubmit={onSubmit}>
-             <NewsletterHeader
-               title={title}
-               description={description}
-               icon={
-                 <Icon
-                   width={32}
-                   height={32}
-                   name={icon}
-                   aria-label={iconAlt}
-                 />
-               }
-             />
-
-             <NewsletterContent>
-               {displayNameInput && (
-                 <InputField
-                   id="newsletter-name"
-                   required
-                   label={nameInputLabel ?? "Name"}
-                   inputRef={nameInputRef}
-                 />
-               )}
-               <InputField
-                 id="newsletter-email"
-                 type="email"
-                 required
-                 label={emailInputLabel ?? "Email"}
-                 inputRef={emailInputRef}
-               />
-               <NewsletterAddendum addendum={privacyPolicy} />
-               <Button variant="secondary" inverse type="submit">
-                 {loading ? subscribeButtonLoadingLabel : subscribeButtonLabel}
-               </Button>
-             </NewsletterContent>
-           </NewsletterForm>
-         </Newsletter>
-       </Section>
-     );
-   }
-
-   export default CustomNewsletter;
-   ```
 
    - `NewsletterProps`: Defines the customizable properties of the newsletter component.
 
@@ -243,177 +57,379 @@ Create a new section to receive the two new custom events:
      - `Submit newsletter success` event: Tracks if the subscription was successful.
    - [`useAnalyticsEvent`](https://developers.vtex.com/docs/guides/faststore/analytics-use-analytics-event) hook: track and handle custom analytics events.
 
-4. To add styles to this new section, create a `section.module.scss` file and add the following:
+    <CH.Code>
 
+    ```tsx
+    import type {
+    ToastProps,
+    NewsletterAddendumProps as UINewsletterAddendumProps,
+    NewsletterHeaderProps as UINewsletterHeaderProps,
+    NewsletterProps as UINewsletterProps,
+    } from "@faststore/ui";
+    import { useUI } from "@faststore/ui";
+    import styles from "./section.module.scss";
 
-   ```scss
-   @layer components {
-     .section {
-       @import "@faststore/ui/src/components/atoms/Button/styles.scss";
-       @import "@faststore/ui/src/components/atoms/Icon/styles.scss";
-       @import "@faststore/ui/src/components/atoms/Input/styles.scss";
-       @import "@faststore/ui/src/components/atoms/Link/styles.scss";
-       @import "@faststore/ui/src/components/molecules/InputField/styles.scss";
-       @import "@faststore/ui/src/components/organisms/Newsletter/styles.scss";
-     }
-   }
-   ```
+    import {
+    Button,
+    Icon,
+    InputField,
+    Newsletter,
+    NewsletterAddendum,
+    NewsletterContent,
+    NewsletterForm,
+    NewsletterHeader,
+    } from "@faststore/ui";
 
-5. Create a file named `index.tsx` inside the components folder and add the following:
+    import { Section } from "@faststore/core";
+    import { useNewsletter_unstable as useNewsletter } from "@faststore/core/experimental";
+    import { type FormEvent, useRef } from "react";
+    import { sendAnalyticsEvent, useAnalyticsEvent } from "@faststore/sdk";
 
-   ```tsx
-   import CustomNewsletter from "./sections/CustomNewsletter/CustomNewsletter";
+    interface ArbitraryEvent {
+    name: string;
+    params: string;
+    }
 
-   const sections = {
-     CustomNewsletter,
-   };
+    type SubscribeMessage = {
+    icon: string;
+    title: string;
+    message: string;
+    };
 
-   export default sections;
-   ```
+    export interface NewsletterProps {
+    title: UINewsletterHeaderProps["title"];
+    card?: UINewsletterProps["card"];
+    colorVariant?: UINewsletterProps["colorVariant"];
+    description?: UINewsletterHeaderProps["description"];
+    privacyPolicy?: UINewsletterAddendumProps["addendum"];
+    emailInputLabel?: string;
+    displayNameInput?: boolean;
+    icon: {
+        alt: string;
+        icon: string;
+    };
+    nameInputLabel?: string;
+    subscribeButtonLabel?: string;
+    subscribeButtonLoadingLabel?: string;
+    toastSubscribe?: SubscribeMessage;
+    toastSubscribeError?: SubscribeMessage;
+    }
 
-6. In your store root repository, if you don’t have it already, create a folder named `cms`.
-7. Inside `cms`, create the `faststore` folder.
-8. Within the `cms/faststore` folder, create the `sections.json` file.
-9. In the `sections.json` file, add the new section you want to display in the Headless CMS. The schema below defines how the Headless CMS renders a section:
+    export const AnalyticsHandler = () => {
+    useAnalyticsEvent((event: ArbitraryEvent) => {
+        console.log("Received event", event);
+    });
 
-   ```json
-   [
-     {
-       "name": "CustomNewsletter",
-       "requiredScopes": [],
-       "schema": {
-         "title": "Custom Newsletter",
-         "description": "Allow users to subscribe to your updates",
-         "type": "object",
-         "required": ["title"],
-         "properties": {
-           "icon": {
-             "title": "Icon",
-             "type": "object",
-             "properties": {
-               "icon": {
-                 "title": "Icon",
-                 "type": "string",
-                 "enumNames": ["Envelope"],
-                 "enum": ["Envelope"],
-                 "default": "Envelope"
-               },
-               "alt": {
-                 "type": "string",
-                 "title": "Alternative Label",
-                 "default": "Envelope"
-               }
-             }
-           },
-           "title": {
-             "title": "Title",
-             "type": "string",
-             "default": "Get News and Special Offers!"
-           },
-           "description": {
-             "title": "Description",
-             "type": "string",
-             "default": "Receive our news and promotions in advance"
-           },
-           "privacyPolicy": {
-             "title": "Privacy Policy Disclaimer",
-             "type": "string",
-             "widget": {
-               "ui:widget": "draftjs-rich-text"
-             }
-           },
-           "emailInputLabel": {
-             "title": "Email input label",
-             "type": "string",
-             "default": "Your Email"
-           },
-           "displayNameInput": {
-             "title": "Request name?",
-             "type": "boolean",
-             "default": true
-           },
-           "nameInputLabel": {
-             "title": "Name input label",
-             "type": "string",
-             "default": "Your Name"
-           },
-           "subscribeButtonLabel": {
-             "title": "Subscribe button label",
-             "type": "string",
-             "default": "Subscribe"
-           },
-           "subscribeButtonLoadingLabel": {
-             "title": "Subscribe button loading label",
-             "type": "string",
-             "default": "Loading..."
-           },
-           "card": {
-             "title": "Newsletter should be in card format?",
-             "type": "boolean",
-             "default": false
-           },
-           "colorVariant": {
-             "title": "Color variant",
-             "type": "string",
-             "enumNames": ["Main", "Light", "Accent"],
-             "enum": ["main", "light", "accent"],
-             "default": "main"
-           },
-           "toastSubscribe": {
-             "title": "Toast Subscribe",
-             "type": "object",
-             "properties": {
-               "title": {
-                 "title": "Title",
-                 "description": "Message Title",
-                 "type": "string",
-                 "default": "Hooray!"
-               },
-               "message": {
-                 "title": "Message",
-                 "description": "Message",
-                 "type": "string",
-                 "default": "Thank for your subscription."
-               },
-               "icon": {
-                 "title": "Icon",
-                 "type": "string",
-                 "enumNames": ["CircleWavyCheck"],
-                 "enum": ["CircleWavyCheck"],
-                 "default": "CircleWavyCheck"
-               }
-             }
-           },
-           "toastSubscribeError": {
-             "title": "Toast Subscribe Error",
-             "type": "object",
-             "properties": {
-               "title": {
-                 "title": "Title",
-                 "description": "Message Title",
-                 "type": "string",
-                 "default": "Oops."
-               },
-               "message": {
-                 "title": "Message",
-                 "description": "Message",
-                 "type": "string",
-                 "default": "Something went wrong. Please Try again."
-               },
-               "icon": {
-                 "title": "Icon",
-                 "type": "string",
-                 "enumNames": ["CircleWavyWarning"],
-                 "enum": ["CircleWavyWarning"],
-                 "default": "CircleWavyWarning"
-               }
-             }
-           }
-         }
-       }
-     }
-   ]
-   ```
+    /* ... */
+
+    return null;
+    };
+
+    function CustomNewsletter({
+    icon: { icon, alt: iconAlt },
+    title,
+    description,
+    privacyPolicy,
+    emailInputLabel,
+    displayNameInput,
+    nameInputLabel,
+    subscribeButtonLabel,
+    subscribeButtonLoadingLabel,
+    card,
+    toastSubscribe,
+    toastSubscribeError,
+    colorVariant,
+    ...otherProps
+    }: NewsletterProps) {
+    const { pushToast } = useUI();
+    const { subscribeUser, loading } = useNewsletter();
+
+    const formRef = useRef<HTMLFormElement>(null);
+    const nameInputRef = useRef<HTMLInputElement>(null);
+    const emailInputRef = useRef<HTMLInputElement>(null);
+
+    const onSubmit = async (event: FormEvent) => {
+        event.preventDefault();
+
+        try {
+        // send event start
+        sendAnalyticsEvent<ArbitraryEvent>({
+            name: "Submit Newsletter",
+            params: "test",
+        });
+
+        const data = await subscribeUser({
+            data: {
+            name: nameInputRef.current?.value ?? "",
+            email: emailInputRef.current?.value ?? "",
+            },
+        });
+
+        if (data?.subscribeToNewsletter?.id) {
+            // send event start
+            sendAnalyticsEvent<ArbitraryEvent>({
+            name: "Submit newsletter success",
+            params: "test",
+            });
+
+            pushToast({
+            ...toastSubscribe,
+            status: "INFO",
+            icon: (
+                <Icon width={30} height={30} name={toastSubscribe?.icon ?? ""} />
+            ),
+            } as ToastProps);
+
+            formRef?.current?.reset();
+        }
+        } catch (error) {
+        pushToast({
+            ...toastSubscribeError,
+            status: "ERROR",
+            icon: (
+            <Icon width={30} height={30} name={toastSubscribeError?.icon ?? ""} />
+            ),
+        } as ToastProps);
+        }
+    };
+
+    return (
+        <Section className={`${styles.section} section-newsletter layout__section`}>
+        <AnalyticsHandler />
+        <Newsletter card={card ?? false} colorVariant={colorVariant}>
+            <NewsletterForm ref={formRef} onSubmit={onSubmit}>
+            <NewsletterHeader
+                title={title}
+                description={description}
+                icon={
+                <Icon width={32} height={32} name={icon} aria-label={iconAlt} />
+                }
+            />
+
+            <NewsletterContent>
+                {displayNameInput && (
+                <InputField
+                    id="newsletter-name"
+                    required
+                    label={nameInputLabel ?? "Name"}
+                    inputRef={nameInputRef}
+                />
+                )}
+                <InputField
+                id="newsletter-email"
+                type="email"
+                required
+                label={emailInputLabel ?? "Email"}
+                inputRef={emailInputRef}
+                />
+                <NewsletterAddendum addendum={privacyPolicy} />
+                <Button variant="secondary" inverse type="submit">
+                {loading ? subscribeButtonLoadingLabel : subscribeButtonLabel}
+                </Button>
+            </NewsletterContent>
+            </NewsletterForm>
+        </Newsletter>
+        </Section>
+    );
+    }
+
+    export default CustomNewsletter;
+    ```
+
+    </CH.Code>
+
+4. Create a file named `index.tsx` inside the components folder and add the following:
+
+<CH.Code>
+
+```tsx
+import CustomNewsletter from "./sections/CustomNewsletter/CustomNewsletter";
+
+const sections = {
+  CustomNewsletter,
+};
+
+export default sections;
+```
+
+</CH.Code>
+
+---
+
+### Style the new section
+
+To add styles to this new section, create a `section.module.scss` file and add the following:
+
+<CH.Code>
+
+```scss
+@layer components {
+  .section {
+    @import "@faststore/ui/src/components/atoms/Button/styles.scss";
+    @import "@faststore/ui/src/components/atoms/Icon/styles.scss";
+    @import "@faststore/ui/src/components/atoms/Input/styles.scss";
+    @import "@faststore/ui/src/components/atoms/Link/styles.scss";
+    @import "@faststore/ui/src/components/molecules/InputField/styles.scss";
+    @import "@faststore/ui/src/components/organisms/Newsletter/styles.scss";
+  }
+}
+```
+
+</CH.Code>
+
+---
+
+### Update the CMS folder
+
+1. In your store root repository, if you don’t have it already, create a folder named `cms`.
+2. Inside `cms`, create the `faststore` folder.
+3. Within the `cms/faststore` folder, create the `sections.json` file.
+4. In the `sections.json` file, add the new section you want to display in the Headless CMS. The schema below defines how the Headless CMS renders a section:
+
+<CH.Code>
+
+```json
+[
+  {
+    "name": "CustomNewsletter",
+    "requiredScopes": [],
+    "schema": {
+      "title": "Custom Newsletter",
+      "description": "Allow users to subscribe to your updates",
+      "type": "object",
+      "required": ["title"],
+      "properties": {
+        "icon": {
+          "title": "Icon",
+          "type": "object",
+          "properties": {
+            "icon": {
+              "title": "Icon",
+              "type": "string",
+              "enumNames": ["Envelope"],
+              "enum": ["Envelope"],
+              "default": "Envelope"
+            },
+            "alt": {
+              "type": "string",
+              "title": "Alternative Label",
+              "default": "Envelope"
+            }
+          }
+        },
+        "title": {
+          "title": "Title",
+          "type": "string",
+          "default": "Get News and Special Offers!"
+        },
+        "description": {
+          "title": "Description",
+          "type": "string",
+          "default": "Receive our news and promotions in advance"
+        },
+        "privacyPolicy": {
+          "title": "Privacy Policy Disclaimer",
+          "type": "string",
+          "widget": {
+            "ui:widget": "draftjs-rich-text"
+          }
+        },
+        "emailInputLabel": {
+          "title": "Email input label",
+          "type": "string",
+          "default": "Your Email"
+        },
+        "displayNameInput": {
+          "title": "Request name?",
+          "type": "boolean",
+          "default": true
+        },
+        "nameInputLabel": {
+          "title": "Name input label",
+          "type": "string",
+          "default": "Your Name"
+        },
+        "subscribeButtonLabel": {
+          "title": "Subscribe button label",
+          "type": "string",
+          "default": "Subscribe"
+        },
+        "subscribeButtonLoadingLabel": {
+          "title": "Subscribe button loading label",
+          "type": "string",
+          "default": "Loading..."
+        },
+        "card": {
+          "title": "Newsletter should be in card format?",
+          "type": "boolean",
+          "default": false
+        },
+        "colorVariant": {
+          "title": "Color variant",
+          "type": "string",
+          "enumNames": ["Main", "Light", "Accent"],
+          "enum": ["main", "light", "accent"],
+          "default": "main"
+        },
+        "toastSubscribe": {
+          "title": "Toast Subscribe",
+          "type": "object",
+          "properties": {
+            "title": {
+              "title": "Title",
+              "description": "Message Title",
+              "type": "string",
+              "default": "Hooray!"
+            },
+            "message": {
+              "title": "Message",
+              "description": "Message",
+              "type": "string",
+              "default": "Thank for your subscription."
+            },
+            "icon": {
+              "title": "Icon",
+              "type": "string",
+              "enumNames": ["CircleWavyCheck"],
+              "enum": ["CircleWavyCheck"],
+              "default": "CircleWavyCheck"
+            }
+          }
+        },
+        "toastSubscribeError": {
+          "title": "Toast Subscribe Error",
+          "type": "object",
+          "properties": {
+            "title": {
+              "title": "Title",
+              "description": "Message Title",
+              "type": "string",
+              "default": "Oops."
+            },
+            "message": {
+              "title": "Message",
+              "description": "Message",
+              "type": "string",
+              "default": "Something went wrong. Please Try again."
+            },
+            "icon": {
+              "title": "Icon",
+              "type": "string",
+              "enumNames": ["CircleWavyWarning"],
+              "enum": ["CircleWavyWarning"],
+              "default": "CircleWavyWarning"
+            }
+          }
+        }
+      }
+    }
+  }
+]
+```
+
+</CH.Code>
+
+<CH.Scrollycoding>
 
 ### Synchronizing the new section with the Headless CMS
 
