--- a/docs/faststore/docs/sdk/analytics/use-case-implementing-custom-newsletter-analytics-events.mdx
+++ b/docs/faststore/docs/sdk/analytics/use-case-implementing-custom-newsletter-analytics-events.mdx
@@ -429,7 +429,7 @@ To add styles to this new section, create a `section.module.scss` file and add t
 
 </CH.Code>
 
-<CH.Scrollycoding>
+</CH.Scrollycoding>
 
 ### Synchronizing the new section with the Headless CMS
 
