--- a/docs/faststore/docs/go-live/1-configuring-external-dns.mdx
+++ b/docs/faststore/docs/go-live/1-configuring-external-dns.mdx
@@ -129,7 +129,7 @@ The next step is to add your store’s domain in the [Settings](https://develope
 
 ### Step 7 - Monitoring the new deployment
 
-After adding your domain to WebOps, a new deployment will be triggered automatically. Before proceeding to the next step, monitor the deployment progress in the WebOps dashboard until it is fully completed with the status `Success`.
+After adding your domain to WebOps, a new deployment will be triggered automatically. Before proceeding to the next step, monitor the deployment progress in the WebOps dashboard until it's fully completed and has the status `Success`.
 
 >ℹ️ If the domain setting is incorrect, the deployment will receive the status `Failed`. Learn more about statuses and how to visualize deployment details in [Production deploys](https://developers.vtex.com/docs/guides/faststore/1-onboarding-dashboard#production-deploys).
 
