--- a/docs/faststore/docs/integrating-with-vtex-products/integrating-with-vtex-ad-network.mdx
+++ b/docs/faststore/docs/integrating-with-vtex-products/integrating-with-vtex-ad-network.mdx
@@ -1,4 +1,7 @@
-# Integrating FastStore with VTEX Ad Network
+---
+title: "Integrating FastStore with VTEX Ad Network"
+hidden: true
+---
 
 > ⚠️ This feature is available only for stores using the [VTEX Ad Network](https://help.vtex.com/en/tutorial/vtex-ad-network-beta--2cgqXcBuJmXN2livQvClur) solution. To enable it, contact [Commercial Support](https://help.vtex.com/en/tracks/support-at-vtex--4AXsGdGHqExp9ZkiNq9eMy/3KQWGgkPOwbFTPfBxL7YwZ) and request the app to be installed on your VTEX account.
 
