--- a/docs/faststore/components/molecules/tooltip.mdx
+++ b/docs/faststore/components/molecules/tooltip.mdx
@@ -9,7 +9,7 @@ The `Tooltip` is a component that provides contextual information when users hov
 
 <Tabs items={['Example', 'Code']} defaultIndex="0">
   <Tab>
-    <OverviewSection style={{ min-height: '180px' }}>
+    <OverviewSection style={{ minHeight: '180px' }}>
       <Tooltip id="textarea-field" content="Simple tooltip">
         <Icon name="ShoppingCart" weight="light" />
       </Tooltip>
