--- a/docs/faststore/docs/getting-started/1-onboarding/dashboard.mdx
+++ b/docs/faststore/docs/getting-started/1-onboarding/dashboard.mdx
@@ -124,7 +124,7 @@ The **Current Domains** section displays the default and primary domains that ha
 
 If your domain is not listed, it may indicate an issue with the configuration or DNS settings that need to be addressed before proceeding with the go-live process.
 
-To remove a domain that is no longer needed, click on the trash icon alongside the current domain you want to remove.
+To remove a domain that is no longer needed, click the trash icon alongside the current domain you want to remove.
 
 ![current-domain](https://vtexhelp.vtexassets.com/assets/docs/src/current-domain___9ff9bcec03f19dd420f8802accd885e4.png)
 
