Add comment (use case scenario)

--- a/docs/faststore/docs/sdk/analytics/sending-custon-events.mdx
+++ b/docs/faststore/docs/sdk/analytics/sending-custon-events.mdx
@@ -4,7 +4,7 @@ title: "Sending custom events"
 
 Even though the [Analytics](https://developers.vtex.com/docs/guides/faststore/analytics-overview) module supports [Google Analytics ecommerce events](https://support.google.com/analytics/answer/14434488?hl=en) by default, a store may need to monitor customer activity not covered by the Analytics module. In these cases, it is still possible to use the [`sendAnalyticsEvent`](https://developers.vtex.com/docs/guides/faststore/analytics-send-analytics-event) and [`useAnalyticsEvent`](https://developers.vtex.com/docs/guides/faststore/analytics-use-analytics-event) functions to fire and intercept custom events. In this guide, learn how to define and send custom events.
 
-> ℹ For a use case scenario of this implementation, see the [Use case: Implementing custom newsletter analytics events](https://docs.google.com/document/d/11ziaTwu4I-n_YcbDQi8Gavt5ss7hGqMXM393I7JsjCk/edit?tab=t.0) guide.
+{/* > ℹ For a use case scenario of this implementation, see the [Use case: Implementing custom newsletter analytics events](https://docs.google.com/document/d/11ziaTwu4I-n_YcbDQi8Gavt5ss7hGqMXM393I7JsjCk/edit?tab=t.0) guide. */}
 
 ## Instructions
 
