Fix link for Sending custom events

--- a/docs/faststore/docs/sdk/analytics/use-case-implementing-custom-newsletter-analytics-events.mdx
+++ b/docs/faststore/docs/sdk/analytics/use-case-implementing-custom-newsletter-analytics-events.mdx
@@ -16,7 +16,7 @@ This guide explains how to track user subscriptions by implementing two custom a
 To follow this guide, you should be familiar with the following topics:
 
 - [FastStore Analytics](https://developers.vtex.com/docs/guides/faststore/analytics-overview)
-- [Sending custom events](https://docs.google.com/document/d/1eDExyXLk327pvcArec9MeRKoGPVZMy-Rr-_nNt_6SP8/edit?tab=t.0#heading=h.9gbuyas3xmoy)
+- [Sending custom events](https://developers.vtex.com/docs/guides/faststore/analytics-sending-custon-events)
 - [Creating a new section](https://developers.vtex.com/docs/guides/faststore/building-sections-creating-a-new-section)
 
 ## Implementation
