--- a/docs/faststore/docs/sdk/analytics/use-case-implementing-custom-newsletter-analytics-events.mdx
+++ b/docs/faststore/docs/sdk/analytics/use-case-implementing-custom-newsletter-analytics-events.mdx
@@ -242,7 +242,7 @@ Create a new section to receive the two new custom events:
 
 <CH.Code>
 
-```tsx
+```tsx index.tsx
 import CustomNewsletter from "./sections/CustomNewsletter/CustomNewsletter";
 
 const sections = {
