--- a/docs/faststore/docs/sdk/analytics/use-case-implementing-custom-newsletter-analytics-events.mdx
+++ b/docs/faststore/docs/sdk/analytics/use-case-implementing-custom-newsletter-analytics-events.mdx
@@ -238,7 +238,11 @@ Create a new section to receive the two new custom events:
 
     </CH.Code>
 
-4. Create a file named `index.tsx` inside the components folder and add the following:
+---
+
+### Create the section `index` file
+
+To make the Newsletter section available in the project, create a file named `index.tsx` inside the components folder and add the following:
 
 <CH.Code>
 
@@ -262,7 +266,7 @@ To add styles to this new section, create a `section.module.scss` file and add t
 
 <CH.Code>
 
-```scss
+```scss section.module.scss
 @layer components {
   .section {
     @import "@faststore/ui/src/components/atoms/Button/styles.scss";
@@ -288,7 +292,7 @@ To add styles to this new section, create a `section.module.scss` file and add t
 
 <CH.Code>
 
-```json
+```json sections.json
 [
   {
     "name": "CustomNewsletter",
