--- a/docs/faststore/docs/sdk/analytics/use-case-implementing-custom-newsletter-analytics-events.mdx
+++ b/docs/faststore/docs/sdk/analytics/use-case-implementing-custom-newsletter-analytics-events.mdx
@@ -59,182 +59,193 @@ Create a new section to receive the two new custom events:
 
     <CH.Code>
 
-    ```tsx
-    import type {
-    ToastProps,
-    NewsletterAddendumProps as UINewsletterAddendumProps,
-    NewsletterHeaderProps as UINewsletterHeaderProps,
-    NewsletterProps as UINewsletterProps,
-    } from "@faststore/ui";
-    import { useUI } from "@faststore/ui";
-    import styles from "./section.module.scss";
+   ```tsx
+   import type {
+     ToastProps,
+     NewsletterAddendumProps as UINewsletterAddendumProps,
+     NewsletterHeaderProps as UINewsletterHeaderProps,
+     NewsletterProps as UINewsletterProps,
+   } from "@faststore/ui";
+   import { useUI } from "@faststore/ui";
+   import styles from "./section.module.scss";
 
-    import {
-    Button,
-    Icon,
-    InputField,
-    Newsletter,
-    NewsletterAddendum,
-    NewsletterContent,
-    NewsletterForm,
-    NewsletterHeader,
-    } from "@faststore/ui";
+   import {
+     Button,
+     Icon,
+     InputField,
+     Newsletter,
+     NewsletterAddendum,
+     NewsletterContent,
+     NewsletterForm,
+     NewsletterHeader,
+   } from "@faststore/ui";
 
-    import { Section } from "@faststore/core";
-    import { useNewsletter_unstable as useNewsletter } from "@faststore/core/experimental";
-    import { type FormEvent, useRef } from "react";
-    import { sendAnalyticsEvent, useAnalyticsEvent } from "@faststore/sdk";
+   import { Section } from "@faststore/core";
+   import { useNewsletter_unstable as useNewsletter } from "@faststore/core/experimental";
+   import { type FormEvent, useRef } from "react";
+   import { sendAnalyticsEvent, useAnalyticsEvent } from "@faststore/sdk";
 
-    interface ArbitraryEvent {
-    name: string;
-    params: string;
-    }
+   interface ArbitraryEvent {
+     name: string;
+     params: string;
+   }
 
-    type SubscribeMessage = {
-    icon: string;
-    title: string;
-    message: string;
-    };
+   type SubscribeMessage = {
+     icon: string;
+     title: string;
+     message: string;
+   };
 
-    export interface NewsletterProps {
-    title: UINewsletterHeaderProps["title"];
-    card?: UINewsletterProps["card"];
-    colorVariant?: UINewsletterProps["colorVariant"];
-    description?: UINewsletterHeaderProps["description"];
-    privacyPolicy?: UINewsletterAddendumProps["addendum"];
-    emailInputLabel?: string;
-    displayNameInput?: boolean;
-    icon: {
-        alt: string;
-        icon: string;
-    };
-    nameInputLabel?: string;
-    subscribeButtonLabel?: string;
-    subscribeButtonLoadingLabel?: string;
-    toastSubscribe?: SubscribeMessage;
-    toastSubscribeError?: SubscribeMessage;
-    }
+   export interface NewsletterProps {
+     title: UINewsletterHeaderProps["title"];
+     card?: UINewsletterProps["card"];
+     colorVariant?: UINewsletterProps["colorVariant"];
+     description?: UINewsletterHeaderProps["description"];
+     privacyPolicy?: UINewsletterAddendumProps["addendum"];
+     emailInputLabel?: string;
+     displayNameInput?: boolean;
+     icon: {
+       alt: string;
+       icon: string;
+     };
+     nameInputLabel?: string;
+     subscribeButtonLabel?: string;
+     subscribeButtonLoadingLabel?: string;
+     toastSubscribe?: SubscribeMessage;
+     toastSubscribeError?: SubscribeMessage;
+   }
 
-    export const AnalyticsHandler = () => {
-    useAnalyticsEvent((event: ArbitraryEvent) => {
-        console.log("Received event", event);
-    });
+   export const AnalyticsHandler = () => {
+     useAnalyticsEvent((event: ArbitraryEvent) => {
+       console.log("Received event", event);
+     });
 
-    /* ... */
+     /* ... */
 
-    return null;
-    };
+     return null;
+   };
 
-    function CustomNewsletter({
-    icon: { icon, alt: iconAlt },
-    title,
-    description,
-    privacyPolicy,
-    emailInputLabel,
-    displayNameInput,
-    nameInputLabel,
-    subscribeButtonLabel,
-    subscribeButtonLoadingLabel,
-    card,
-    toastSubscribe,
-    toastSubscribeError,
-    colorVariant,
-    ...otherProps
-    }: NewsletterProps) {
-    const { pushToast } = useUI();
-    const { subscribeUser, loading } = useNewsletter();
+   function CustomNewsletter({
+     icon: { icon, alt: iconAlt },
+     title,
+     description,
+     privacyPolicy,
+     emailInputLabel,
+     displayNameInput,
+     nameInputLabel,
+     subscribeButtonLabel,
+     subscribeButtonLoadingLabel,
+     card,
+     toastSubscribe,
+     toastSubscribeError,
+     colorVariant,
+     ...otherProps
+   }: NewsletterProps) {
+     const { pushToast } = useUI();
+     const { subscribeUser, loading } = useNewsletter();
 
-    const formRef = useRef<HTMLFormElement>(null);
-    const nameInputRef = useRef<HTMLInputElement>(null);
-    const emailInputRef = useRef<HTMLInputElement>(null);
+     const formRef = useRef<HTMLFormElement>(null);
+     const nameInputRef = useRef<HTMLInputElement>(null);
+     const emailInputRef = useRef<HTMLInputElement>(null);
 
-    const onSubmit = async (event: FormEvent) => {
-        event.preventDefault();
+     const onSubmit = async (event: FormEvent) => {
+       event.preventDefault();
 
-        try {
-        // send event start
-        sendAnalyticsEvent<ArbitraryEvent>({
-            name: "Submit Newsletter",
-            params: "test",
-        });
+       try {
+         // send event start
+         sendAnalyticsEvent<ArbitraryEvent>({
+           name: "Submit Newsletter",
+           params: "test",
+         });
 
-        const data = await subscribeUser({
-            data: {
-            name: nameInputRef.current?.value ?? "",
-            email: emailInputRef.current?.value ?? "",
-            },
-        });
+         const data = await subscribeUser({
+           data: {
+             name: nameInputRef.current?.value ?? "",
+             email: emailInputRef.current?.value ?? "",
+           },
+         });
 
-        if (data?.subscribeToNewsletter?.id) {
-            // send event start
-            sendAnalyticsEvent<ArbitraryEvent>({
-            name: "Submit newsletter success",
-            params: "test",
-            });
+         if (data?.subscribeToNewsletter?.id) {
+           // send event start
+           sendAnalyticsEvent<ArbitraryEvent>({
+             name: "Submit newsletter success",
+             params: "test",
+           });
 
-            pushToast({
-            ...toastSubscribe,
-            status: "INFO",
-            icon: (
-                <Icon width={30} height={30} name={toastSubscribe?.icon ?? ""} />
-            ),
-            } as ToastProps);
+           pushToast({
+             ...toastSubscribe,
+             status: "INFO",
+             icon: (
+               <Icon width={30} height={30} name={toastSubscribe?.icon ?? ""} />
+             ),
+           } as ToastProps);
 
-            formRef?.current?.reset();
-        }
-        } catch (error) {
-        pushToast({
-            ...toastSubscribeError,
-            status: "ERROR",
-            icon: (
-            <Icon width={30} height={30} name={toastSubscribeError?.icon ?? ""} />
-            ),
-        } as ToastProps);
-        }
-    };
+           formRef?.current?.reset();
+         }
+       } catch (error) {
+         pushToast({
+           ...toastSubscribeError,
+           status: "ERROR",
+           icon: (
+             <Icon
+               width={30}
+               height={30}
+               name={toastSubscribeError?.icon ?? ""}
+             />
+           ),
+         } as ToastProps);
+       }
+     };
 
-    return (
-        <Section className={`${styles.section} section-newsletter layout__section`}>
-        <AnalyticsHandler />
-        <Newsletter card={card ?? false} colorVariant={colorVariant}>
-            <NewsletterForm ref={formRef} onSubmit={onSubmit}>
-            <NewsletterHeader
-                title={title}
-                description={description}
-                icon={
-                <Icon width={32} height={32} name={icon} aria-label={iconAlt} />
-                }
-            />
+     return (
+       <Section
+         className={`${styles.section} section-newsletter layout__section`}
+       >
+         <AnalyticsHandler />
+         <Newsletter card={card ?? false} colorVariant={colorVariant}>
+           <NewsletterForm ref={formRef} onSubmit={onSubmit}>
+             <NewsletterHeader
+               title={title}
+               description={description}
+               icon={
+                 <Icon
+                   width={32}
+                   height={32}
+                   name={icon}
+                   aria-label={iconAlt}
+                 />
+               }
+             />
 
-            <NewsletterContent>
-                {displayNameInput && (
-                <InputField
-                    id="newsletter-name"
-                    required
-                    label={nameInputLabel ?? "Name"}
-                    inputRef={nameInputRef}
-                />
-                )}
-                <InputField
-                id="newsletter-email"
-                type="email"
-                required
-                label={emailInputLabel ?? "Email"}
-                inputRef={emailInputRef}
-                />
-                <NewsletterAddendum addendum={privacyPolicy} />
-                <Button variant="secondary" inverse type="submit">
-                {loading ? subscribeButtonLoadingLabel : subscribeButtonLabel}
-                </Button>
-            </NewsletterContent>
-            </NewsletterForm>
-        </Newsletter>
-        </Section>
-    );
-    }
+             <NewsletterContent>
+               {displayNameInput && (
+                 <InputField
+                   id="newsletter-name"
+                   required
+                   label={nameInputLabel ?? "Name"}
+                   inputRef={nameInputRef}
+                 />
+               )}
+               <InputField
+                 id="newsletter-email"
+                 type="email"
+                 required
+                 label={emailInputLabel ?? "Email"}
+                 inputRef={emailInputRef}
+               />
+               <NewsletterAddendum addendum={privacyPolicy} />
+               <Button variant="secondary" inverse type="submit">
+                 {loading ? subscribeButtonLoadingLabel : subscribeButtonLabel}
+               </Button>
+             </NewsletterContent>
+           </NewsletterForm>
+         </Newsletter>
+       </Section>
+     );
+   }
 
-    export default CustomNewsletter;
-    ```
+   export default CustomNewsletter;
+   ```
 
     </CH.Code>
 
