--- a/docs/faststore/docs/sdk/overview.mdx
+++ b/docs/faststore/docs/sdk/overview.mdx
@@ -16,13 +16,13 @@ The SDK is organized into four modules with specific properties and behaviors. T
 
 ## Cart
 
-The Cart module controls the state of the shopping cart data structure in the shopper's browser. You can use it to add items to the cart, remove items, and clear the cart, among other tasks. {/* Learn more about [Cart](LINK) module. */}
+The Cart module controls the state of the shopping cart data structure in the shopper's browser. You can use it to add items to the cart, remove items, and clear the cart, among other tasks. Learn more about [Cart](https://developers.vtex.com/docs/guides/faststore/cart-overview) module.
 
 > ℹ️ Learn more about validating the cart in the shopper browser against the information in the platform with [FastStore API mutations](https://developers.vtex.com/docs/guides/faststore/schema-mutations#cart).
 
 ## Session
 
-The Session module manages the state of session information in the shopper browser. This includes currency, channel, localization, and shopper information. {/* Learn more about the [Session module](LINK) data structure and usage. */}
+The Session module manages the state of session information in the shopper browser. This includes currency, channel, localization, and shopper information. Learn more about the [Session module](https://developers.vtex.com/docs/guides/faststore/sdk-session) data structure and usage.
 
 > ℹ️ Learn more about validating the cart in the shopper browser against the information in the platform with [FastStore API mutations](https://developers.vtex.com/docs/guides/faststore/schema-mutations#session).
 
@@ -30,7 +30,7 @@ The Session module manages the state of session information in the shopper brows
 
 The Search module offers functions for implementing a faceted search based on URL parameters. Whenever a shopper searches your store or changes the selected facets, the search module generates a unique and serialized URL and then directs the user to that URL.
 
-{/* Learn more about how to use the [Search module](LINK) in your project. */}
+Learn more about how to use the [Search module](https://developers.vtex.com/docs/guides/faststore/search-overview) in your project.
 
 ## Analytics
 
