--- a/docs/faststore/components/molecules/modal.mdx
+++ b/docs/faststore/components/molecules/modal.mdx
@@ -69,7 +69,7 @@ Follow the instructions in the [Importing FastStore UI component styles](https:/
                 <p>This is the ModalBody</p>
               </ModalBody>
               <ModalFooter>
-                <Button variant="second" onClick={() => fadeOut()}>Cancel</Button>
+                <Button variant="secondary" onClick={() => fadeOut()}>Cancel</Button>
                 <Button variant="primary" onClick={() => fadeOut()}>Confirm</Button>
               </ModalFooter>
             </>
