--- a/docs/faststore/docs/faststore-api/configuring-graphql-cache-control.mdx
+++ b/docs/faststore/docs/faststore-api/configuring-graphql-cache-control.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Configuring GraphQL cache control for GET Requests'
+title: 'Configuring GraphQL cache control for GET requests'
 ---
 
 > ⚠ This is an experimental feature.
