--- a/docs/faststore/docs/faststore-api/configuring-graphql-cache-control.mdx
+++ b/docs/faststore/docs/faststore-api/configuring-graphql-cache-control.mdx
@@ -60,7 +60,7 @@ Since the `graphqlCacheControl` flag is an experimental feature, declare it unde
 
 ### Recommend values
 
-{/* Is that possible to recommend `maxAge` and `staleWhileRevalidate` values? See an example we show below
+{/* Is that possible to recommend `maxAge` and `staleWhileRevalidate` values? See an example on how we could demonstrate below
 
 | **Use case** | **Suggested `maxAge`** | **Suggested `staleWhileRevalidate`** |
 | PLPs | 300s (5m) | 60s (1m)
