--- a/docs/faststore/docs/faststore-api/configuring-graphql-cache-control.mdx
+++ b/docs/faststore/docs/faststore-api/configuring-graphql-cache-control.mdx
@@ -69,4 +69,4 @@ Since the `graphqlCacheControl` flag is an experimental feature, declare it unde
 
 ## Testing the cache configuration
 
-{/* How to test this configuration? Is that a real case scenario example? */}
+{/* How to test this configuration? Is there an use case example? */}
