Add FastStore API link

--- a/docs/faststore/docs/faststore-api/configuring-graphql-cache-control.mdx
+++ b/docs/faststore/docs/faststore-api/configuring-graphql-cache-control.mdx
@@ -4,7 +4,7 @@ title: 'Configuring GraphQL cache control for GET requests'
 
 > ⚠ This is an experimental feature.
 
-This guide explains how to configure caching for GraphQL GET requests using the `graphqlCacheControl` flag. By setting cache rules, you can store responses and reuse them for subsequent requests through FastStore's GraphQL layer, reducing server load and improving store performance.
+This guide explains how to configure caching for GraphQL GET requests using the `graphqlCacheControl` flag. By setting cache rules, you can store responses and reuse them for subsequent requests through [FastStore API's GraphQL layer](https://developers.vtex.com/docs/guides/faststore/faststore-api-overview), reducing server load and improving store performance.
 
 The `graphqlCacheControl` flag defines how long responses should be stored and reused by configuring caching for GraphQL GET requests.
 
