--- a/docs/faststore/docs/reference/project-structure/config-options.mdx
+++ b/docs/faststore/docs/reference/project-structure/config-options.mdx
@@ -100,7 +100,7 @@ Maps redirect URLs for the following page types in preview mode, with each field
   - `search`: Redirect URL for a search results page.
   - `pdp`: Redirect URL for a product details page.
 
-Learn more in [Managing URLs with redirects and rewrite paths](Managing URLs with redirects and rewrite paths).
+Learn more in [Managing URLs with redirects and rewrite paths](https://developers.vtex.com/docs/guides/faststore/routing-managing-urls-with-redirects-and-rewrite-paths).
 
 ### `lighthouse`
 Includes settings for [Lighthouse](https://developer.chrome.com/docs/lighthouse/overview), a tool for auditing and improving the quality of web pages.
